--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Pet Suite</th></tr>
-<tr><td><a href="#t0">Pet Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">20,528</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Pet Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">22,120</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Pet Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Pet Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">test.UserTest2</td><td><a href="#m0">testDeleteUserByName</a></td><td rowspan="1">1679396147295</td><td rowspan="1">1781</td></tr><tr class="passedeven"><td><a href="#m1">testGetUserByName</a></td><td rowspan="1">1679396141479</td><td rowspan="1">1985</td></tr><tr class="passedeven"><td><a href="#m2">testPostUser</a></td><td rowspan="1">1679396130704</td><td rowspan="1">10682</td></tr><tr class="passedeven"><td><a href="#m3">testUpdateUserByName</a></td><td rowspan="1">1679396143464</td><td rowspan="1">3831</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Pet Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Pet Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">test.usertest.UserTest2</td><td><a href="#m0">testDeleteUserByName</a></td><td rowspan="1">1679630668322</td><td rowspan="1">2234</td></tr><tr class="passedeven"><td><a href="#m1">testGetUserByName</a></td><td rowspan="1">1679630661119</td><td rowspan="1">3047</td></tr><tr class="passedeven"><td><a href="#m2">testPostUser</a></td><td rowspan="1">1679630650639</td><td rowspan="1">10261</td></tr><tr class="passedeven"><td><a href="#m3">testUpdateUserByName</a></td><td rowspan="1">1679630664181</td><td rowspan="1">4141</td></tr></tbody>
 </table>
-<h2>Pet Test</h2><h3 id="m0">test.UserTest2#testDeleteUserByName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">test.UserTest2#testGetUserByName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">test.UserTest2#testPostUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">test.UserTest2#testUpdateUserByName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Pet Test</h2><h3 id="m0">test.usertest.UserTest2#testDeleteUserByName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">test.usertest.UserTest2#testGetUserByName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">test.usertest.UserTest2#testPostUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">test.usertest.UserTest2#testUpdateUserByName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
