--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,22 +102,22 @@
                     <div class="method-list-content passed suite-Pet_Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Pet_Suite" title="test.UserTest2" hash-for-method="testDeleteUserByName">testDeleteUserByName</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Pet_Suite" title="test.usertest.UserTest2" hash-for-method="testDeleteUserByName">testDeleteUserByName</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Pet_Suite" title="test.UserTest2" hash-for-method="testGetUserByName">testGetUserByName</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Pet_Suite" title="test.usertest.UserTest2" hash-for-method="testGetUserByName">testGetUserByName</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Pet_Suite" title="test.UserTest2" hash-for-method="testPostUser">testPostUser</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Pet_Suite" title="test.usertest.UserTest2" hash-for-method="testPostUser">testPostUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Pet_Suite" title="test.UserTest2" hash-for-method="testUpdateUserByName">testUpdateUserByName</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Pet_Suite" title="test.usertest.UserTest2" hash-for-method="testUpdateUserByName">testUpdateUserByName</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Pet_Suite -->
@@ -135,7 +135,7 @@
           <div class="suite-Pet_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">test.UserTest2</span>
+              <span class="class-name">test.usertest.UserTest2</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -183,7 +183,7 @@
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Pet Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;test.UserTest2&quot;/&gt;
+      &lt;class name=&quot;test.usertest.UserTest2&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Pet Test --&gt;
 &lt;/suite&gt; &lt;!-- Pet Suite --&gt;
@@ -226,25 +226,25 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testPostUser')
-data.setCell(0, 2, 'test.UserTest2')
-data.setCell(0, 3, 10682);
+data.setCell(0, 2, 'test.usertest.UserTest2')
+data.setCell(0, 3, 10261);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testUpdateUserByName')
-data.setCell(1, 2, 'test.UserTest2')
-data.setCell(1, 3, 3831);
+data.setCell(1, 2, 'test.usertest.UserTest2')
+data.setCell(1, 3, 4141);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'testGetUserByName')
-data.setCell(2, 2, 'test.UserTest2')
-data.setCell(2, 3, 1985);
+data.setCell(2, 2, 'test.usertest.UserTest2')
+data.setCell(2, 3, 3047);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'testDeleteUserByName')
-data.setCell(3, 2, 'test.UserTest2')
-data.setCell(3, 3, 1781);
+data.setCell(3, 2, 'test.usertest.UserTest2')
+data.setCell(3, 3, 2234);
 window.suiteTableData['Pet_Suite']= { tableData: data, tableDiv: 'times-div-Pet_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 seconds</span>
+              <span class="suite-total-time">Total running time: 19 seconds</span>
               <div id="times-div-Pet_Suite">
               </div> <!-- times-div-Pet_Suite -->
             </div> <!-- times-div -->
@@ -270,26 +270,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">test.UserTest2</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">test.usertest.UserTest2</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setupData</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">testPostUser</span>
-                <span class="method-start">1641 ms</span>
+                <span class="method-start">1484 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testGetUserByName</span>
-                <span class="method-start">12416 ms</span>
+                <span class="method-start">11964 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testUpdateUserByName</span>
-                <span class="method-start">14401 ms</span>
+                <span class="method-start">15026 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testDeleteUserByName</span>
-                <span class="method-start">18232 ms</span>
+                <span class="method-start">19167 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
