This is my 8th commit

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Pet_Suite">
-                    <span>C:\Users\ghg\IdeaProjects\PetStoreRestAssuredFrameWork\testng.xml</span>
+                    <span>C:\Users\ghg\eclipse-workspace\PetStoreRestAssuredFrameWork\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -171,7 +171,7 @@
         </div> <!-- panel Pet_Suite -->
         <div panel-name="test-xml-Pet_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ghg\IdeaProjects\PetStoreRestAssuredFrameWork\testng.xml</span>
+            <span class="header-content">C:\Users\ghg\eclipse-workspace\PetStoreRestAssuredFrameWork\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -227,24 +227,24 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testPostUser')
 data.setCell(0, 2, 'test.usertest.UserTest2')
-data.setCell(0, 3, 10261);
+data.setCell(0, 3, 9899);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testUpdateUserByName')
 data.setCell(1, 2, 'test.usertest.UserTest2')
-data.setCell(1, 3, 4141);
+data.setCell(1, 3, 2920);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'testGetUserByName')
 data.setCell(2, 2, 'test.usertest.UserTest2')
-data.setCell(2, 3, 3047);
+data.setCell(2, 3, 2074);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'testDeleteUserByName')
 data.setCell(3, 2, 'test.usertest.UserTest2')
-data.setCell(3, 3, 2234);
+data.setCell(3, 3, 1421);
 window.suiteTableData['Pet_Suite']= { tableData: data, tableDiv: 'times-div-Pet_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 19 seconds</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Pet_Suite">
               </div> <!-- times-div-Pet_Suite -->
             </div> <!-- times-div -->
@@ -277,19 +277,19 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">testPostUser</span>
-                <span class="method-start">1484 ms</span>
+                <span class="method-start">3127 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testGetUserByName</span>
-                <span class="method-start">11964 ms</span>
+                <span class="method-start">13146 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testUpdateUserByName</span>
-                <span class="method-start">15026 ms</span>
+                <span class="method-start">15226 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testDeleteUserByName</span>
-                <span class="method-start">19167 ms</span>
+                <span class="method-start">18153 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
