--- a/test-output/old/Pet Suite/methods-alphabetical.html
+++ b/test-output/old/Pet Suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Pet Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b39c99">  <td>23/03/24 09:34:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UserTest2.setupData()[pri:0, instance:test.usertest.UserTest2@67b64c45]">&gt;&gt;setupData</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@371619938</td>   <td></td> </tr>
-<tr bgcolor="b39c99">  <td>23/03/24 09:34:28</td>   <td>19167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest2.testDeleteUserByName()[pri:4, instance:test.usertest.UserTest2@67b64c45]">testDeleteUserByName</td> 
-  <td>main@371619938</td>   <td></td> </tr>
-<tr bgcolor="b39c99">  <td>23/03/24 09:34:21</td>   <td>11964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest2.testGetUserByName()[pri:2, instance:test.usertest.UserTest2@67b64c45]">testGetUserByName</td> 
-  <td>main@371619938</td>   <td></td> </tr>
-<tr bgcolor="b39c99">  <td>23/03/24 09:34:10</td>   <td>1484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest2.testPostUser()[pri:1, instance:test.usertest.UserTest2@67b64c45]">testPostUser</td> 
-  <td>main@371619938</td>   <td></td> </tr>
-<tr bgcolor="b39c99">  <td>23/03/24 09:34:24</td>   <td>15026</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest2.testUpdateUserByName()[pri:3, instance:test.usertest.UserTest2@67b64c45]">testUpdateUserByName</td> 
-  <td>main@371619938</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/03/26 09:37:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UserTest2.setupData()[pri:0, instance:test.usertest.UserTest2@271053e1]">&gt;&gt;setupData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1024597427</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/03/26 09:38:01</td>   <td>18140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest2.testDeleteUserByName()[pri:4, instance:test.usertest.UserTest2@271053e1]">testDeleteUserByName</td> 
+  <td>main@1024597427</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/03/26 09:37:56</td>   <td>13133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest2.testGetUserByName()[pri:2, instance:test.usertest.UserTest2@271053e1]">testGetUserByName</td> 
+  <td>main@1024597427</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/03/26 09:37:46</td>   <td>3114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest2.testPostUser()[pri:1, instance:test.usertest.UserTest2@271053e1]">testPostUser</td> 
+  <td>main@1024597427</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/03/26 09:37:58</td>   <td>15213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest2.testUpdateUserByName()[pri:3, instance:test.usertest.UserTest2@271053e1]">testUpdateUserByName</td> 
+  <td>main@1024597427</td>   <td></td> </tr>
 </table>
