--- a/test-output/old/Pet Suite/methods.html
+++ b/test-output/old/Pet Suite/methods.html
@@ -1,14 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Pet Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c7cbad">  <td>23/03/26 09:37:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UserTest2.setupData()[pri:0, instance:test.usertest.UserTest2@271053e1]">&gt;&gt;setupData</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1024597427</td>   <td></td> </tr>
-<tr bgcolor="c7cbad">  <td>23/03/26 09:37:46</td>   <td>3114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest2.testPostUser()[pri:1, instance:test.usertest.UserTest2@271053e1]">testPostUser</td> 
-  <td>main@1024597427</td>   <td></td> </tr>
-<tr bgcolor="c7cbad">  <td>23/03/26 09:37:56</td>   <td>13133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest2.testGetUserByName()[pri:2, instance:test.usertest.UserTest2@271053e1]">testGetUserByName</td> 
-  <td>main@1024597427</td>   <td></td> </tr>
-<tr bgcolor="c7cbad">  <td>23/03/26 09:37:58</td>   <td>15213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest2.testUpdateUserByName()[pri:3, instance:test.usertest.UserTest2@271053e1]">testUpdateUserByName</td> 
-  <td>main@1024597427</td>   <td></td> </tr>
-<tr bgcolor="c7cbad">  <td>23/03/26 09:38:01</td>   <td>18140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserTest2.testDeleteUserByName()[pri:4, instance:test.usertest.UserTest2@271053e1]">testDeleteUserByName</td> 
-  <td>main@1024597427</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/04/12 13:25:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTest.testPostUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:test.usertest.DDTest@f6c48ac]">testPostUser</td> 
+  <td>main@1571967156</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/04/12 13:25:59</td>   <td>9033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTest.testPostUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:test.usertest.DDTest@f6c48ac]">testPostUser</td> 
+  <td>main@1571967156</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/04/12 13:26:01</td>   <td>10557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTest.testPostUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:test.usertest.DDTest@f6c48ac]">testPostUser</td> 
+  <td>main@1571967156</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/04/12 13:26:02</td>   <td>11981</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTest.testPostUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:test.usertest.DDTest@f6c48ac]">testPostUser</td> 
+  <td>main@1571967156</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/04/12 13:26:04</td>   <td>13379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTest.testPostUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:test.usertest.DDTest@f6c48ac]">testPostUser</td> 
+  <td>main@1571967156</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/04/12 13:26:05</td>   <td>14801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTest.testPostUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:test.usertest.DDTest@f6c48ac]">testPostUser</td> 
+  <td>main@1571967156</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/04/12 13:26:07</td>   <td>16837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTest.testDeleteUserByName(java.lang.String)[pri:2, instance:test.usertest.DDTest@f6c48ac]">testDeleteUserByName</td> 
+  <td>main@1571967156</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/04/12 13:26:08</td>   <td>18257</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTest.testDeleteUserByName(java.lang.String)[pri:2, instance:test.usertest.DDTest@f6c48ac]">testDeleteUserByName</td> 
+  <td>main@1571967156</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/04/12 13:26:10</td>   <td>19721</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTest.testDeleteUserByName(java.lang.String)[pri:2, instance:test.usertest.DDTest@f6c48ac]">testDeleteUserByName</td> 
+  <td>main@1571967156</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/04/12 13:26:11</td>   <td>21189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTest.testDeleteUserByName(java.lang.String)[pri:2, instance:test.usertest.DDTest@f6c48ac]">testDeleteUserByName</td> 
+  <td>main@1571967156</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/04/12 13:26:13</td>   <td>22564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTest.testDeleteUserByName(java.lang.String)[pri:2, instance:test.usertest.DDTest@f6c48ac]">testDeleteUserByName</td> 
+  <td>main@1571967156</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>23/04/12 13:26:14</td>   <td>23970</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DDTest.testDeleteUserByName(java.lang.String)[pri:2, instance:test.usertest.DDTest@f6c48ac]">testDeleteUserByName</td> 
+  <td>main@1571967156</td>   <td></td> </tr>
 </table>
